--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,9 @@ dependencies {
             //owner
             'org.aeonbits.owner:owner:1.0.12',
             //rest
-            'io.rest-assured:rest-assured:5.3.2'
+            'io.rest-assured:rest-assured:5.3.2',
+            'com.fasterxml.jackson.core:jackson-databind:2.16.0',
+            'io.qameta.allure:allure-rest-assured:2.24.0'
     )
 
 
